# nirila_misskey_jp_emoji_reverser_proto

./: Cargo.toml
src/: main.rs
